removed cname tomlyang.com

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Tom Yang
 email: tboneyang@gmail.com
-url: tomlyang.me
+url: tboneyang.github.io
 description: "I solve problems with tech. Check out some of my projects below"
 
 # Contact form: comment the line below if you want to stick with the default PHP contact form
